Fixed links on mobile blog, removed dupliocate pics on blogs, fixed styling on about mobile

--- a/small.css
+++ b/small.css
@@ -95,7 +95,10 @@ color: white;
   margin: 3%;
 }
 /*About Page Layout*/
-.About h1{
+.About h2{
+  text-align: center;
+}
+#contactlink{
   display: flex;
   justify-content: center;
 }
